<resources>
    <string name="app_name">Running Races App</string>
    <string name="menu_addRace">Add</string>
    <string name="menu_cancelRace">Cancel</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="select_race_image">Select image</string>
    <string name="change_race_image">Change placemark image</string>
    <string name="button_location">Update Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">email@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add_race">Add Race</string>
    <string name="action_report">Created Races</string>
    <string name="racesNotFound">No Races Found...</string>
    <string name="raceError">Error adding race</string>
    <string name="messageLoading">Please wait while the existing races are loading...</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_reenter_password">Re-Enter Password</string>
    <string name="hint_username">Username</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="register_message">Please Register Below</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="change_theme">Change Theme</string>
    <string name="choose_theme_text">Choose Theme</string>
    <string name="clear_no_races_found">Clear favourite filter</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="clear_filters">Clear Filters</string>
</resources>