<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/reportFragment"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/raceFragment"
            android:title="@string/action_add_race"
            android:icon="@drawable/ic_baseline_add_icon_24"/>
        <item
            android:id="@+id/mapListFragment"
            android:title="@string/menu_map"
            android:icon="@drawable/ic_baseline_map_24"/>
    </group>

    <item android:title="App Settings">
        <menu>
            <item
                android:id="@+id/item_change_theme"
                android:title="@string/change_theme"
                android:onClick="changeTheme"
                android:icon="@drawable/ic_theme_icon"/>
        </menu>
    </item>


    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/item_logout"
                android:title="@string/menu_logout"
                android:onClick="signOut"
                android:icon="@drawable/ic_baseline_exit_to_app_24"/>

        </menu>
    </item>

</menu>